// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Pagination center renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination justify-content-center"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination end renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination justify-content-end"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination lg renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination pagination-lg"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly as glossary 1`] = `
<jest>
  <nav
    class="bcl-glossary"
    role="navigation"
  >
    <ul
      class="pagination pagination--glossary"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly with new attributes on items 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination sm renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination pagination-sm"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination with custom icon for next renders for correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination with custom list attributes renders for correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination with ellipsises renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      >
        <div
          class="page-link"
        >
          <span
            aria-hidden="true"
          >
             … 
          </span>
        </div>
      </li>
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      >
        <div
          class="page-link"
        >
          <span
            aria-hidden="true"
          >
             … 
          </span>
        </div>
      </li>
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination without icon path renders correctly 1`] = `
<jest>
  <nav
    role="navigation"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item disabled"
      />
      <li
        class="page-item active"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
      <li
        class="page-item"
      />
    </ul>
  </nav>
</jest>
`;
